HYDRAN-1910: Add pagination to resources
